--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,9 +1,20 @@
-{{#each model.cardclasses as |cardclass|}}
-	<img src={{cardclass.image}} title={{cardclass.name_fr}} alt={{cardclass.name_fr}} width="64px"
-		style={{if (and class (not-eq class cardclass.id)) "filter:opacity(30%)"}}
-		{{action 'toggleParam' 'class' cardclass.id}}
-	/>
-{{/each}}
+<div>
+	{{#each model.cardclasses as |cardclass|}}
+		<img src={{cardclass.image}} title={{cardclass.name_fr}} alt={{cardclass.name_fr}} width="64px"
+			style={{if (and class (not-eq class cardclass.id)) "filter:opacity(30%)"}}
+			{{action 'toggleParam' 'class' cardclass.id}}
+		/>
+	{{/each}}
+</div>
+
+<div>
+	{{#each (array '0' '1' '2' '3' '4' '5' '6' '7' '8' '9' '10') as |mana|}}
+		<img src={{concat "assets/mana_" mana ".png"}} alt={{mana}}
+			style={{if (and cost (not-eq cost mana)) "filter:opacity(30%)"}}
+			{{action 'toggleParam' 'cost' mana}}
+		/>
+	{{/each}}
+</div>
 
 <hr>
 
