--- a/app/templates/user/collection.hbs
+++ b/app/templates/user/collection.hbs
@@ -29,14 +29,14 @@
 
 {{#each model.cards as |card|}}
 	<div class="card" style="float:left">
+		<div class="number" {{action 'removeFromCollection' card}}>
+			{{card.collections.firstObject.number}}
+		</div>
 		<div class="image">
 			<img src={{card.image}}
-				class={{if (not (filter-by "user_id" model.user.id_int card.collections)) "faded"}}
+				class={{if (not card.collections.firstObject.number) "faded"}}
 				{{action 'addToCollection' card}}
 			/>
 		</div>
-		<p class="number" {{action 'removeFromCollection' card}}>
-			{{get (object-at 0 (filter-by "user_id" model.user.id_int card.collections)) "number"}}
-		</p>
 	</div>
 {{/each}}
