--- a/app/templates/user.hbs
+++ b/app/templates/user.hbs
@@ -1,1 +1,13 @@
+<strong>{{model.name}}</strong>
+-
+{{#link-to 'user.collection' model.id}}
+	Collection
+{{/link-to}}
+-
+{{#link-to 'user.stats' model.id}}
+	Stats
+{{/link-to}}
+
+<hr/>
+
 {{outlet}}
