--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -15,6 +15,16 @@ a:link, a:visited {
 	padding-left: 20px;
 }
 
+div.format {
+	float: right;
+}
+div.format img {
+	width: 150px;
+}
+th.format img {
+	width: 40px;
+}
+
 .faded {
 	filter: opacity(30%);
 }
