--- a/app/templates/user/stats.hbs
+++ b/app/templates/user/stats.hbs
@@ -1,3 +1,81 @@
+<h3>Complétion</h3>
+
+{{#with model.stat.completion as |total|}}
+	<table>
+		<tr>
+			<th class="format">
+				<img src={{concat "/assets/" (if standard "standard" "wild") ".png"}}
+					{{action 'toggleFormat'}}
+				/>
+			</th>
+			{{#each model.cardsets as |set|}}
+				{{#if (or (not standard) set.standard)}}
+					<th>
+						<img src={{set.image}} title={{set.name_fr}} alt={{set.name_fr}} height="50px"/>
+					</th>
+				{{/if}}
+			{{/each}}
+			<th>TOTAL</th>
+			<th>%</th>
+		</tr>
+
+		{{#each ordered_rarities as |rarity|}}
+			<tr>
+				<th>{{rarity.name_fr}}</th>
+				{{#each model.cardsets as |set|}}
+					{{#if (or (not standard) set.standard)}}
+						<td>
+							{{#if (get (get (get (get total.cardsets set.id) "rarities") rarity.id) "total")}}
+								{{get (get (get (get total.cardsets set.id) "rarities") rarity.id) "owned"}}
+								/
+								{{get (get (get (get total.cardsets set.id) "rarities") rarity.id) "total"}}
+							{{/if}}
+						</td>
+					{{/if}}
+				{{/each}}
+				<th>
+					{{get (get total.rarities rarity.id) (if standard "owned_std" "owned")}}
+					/
+					{{get (get total.rarities rarity.id) (if standard "total_std" "total")}}
+				</th>
+				<th>
+					{{round (mult 100 (div (get (get total.rarities rarity.id) (if standard "owned_std" "owned")) (get (get total.rarities rarity.id) (if standard "total_std" "total"))))}}&nbsp;%
+				</th>
+			</tr>
+		{{/each}}
+
+		<tr>
+			<th>TOTAL</th>
+			{{#each model.cardsets as |set|}}
+				{{#if (or (not standard) set.standard)}}
+					<th>
+						{{get (get total.cardsets set.id) "owned"}}&nbsp;/&nbsp;{{get (get total.cardsets set.id) "total"}}
+					</th>
+				{{/if}}
+			{{/each}}
+			<th>
+				{{if standard total.owned_std total.owned}}&nbsp;/&nbsp;{{if standard total.total_std total.total}}
+			</th>
+		</tr>
+
+		<tr>
+			<th>%</th>
+			{{#each model.cardsets as |set|}}
+				{{#if (or (not standard) set.standard)}}
+					<th>
+						{{round (mult 100 (div (get (get total.cardsets set.id) "owned") (get (get total.cardsets set.id) "total")))}} %
+					</th>
+				{{/if}}
+			{{/each}}
+			<th>
+				{{round (mult 100 (div (if standard total.owned_std total.owned) (if standard total.total_std total.total)))}}&nbsp;%
+			</th>
+		</tr>
+	</table>
+{{/with}}
+
+<h3>Diversité</h3>
+
 {{#with model.stat.total as |total|}}
 	<table>
 		<tr>
