--- a/app/templates/user.hbs
+++ b/app/templates/user.hbs
@@ -10,6 +10,10 @@
 	{{#link-to 'user.stats' model.id title="Stats"}}
 		<i class="fas fa-percent pointer fa-2x"></i>
 	{{/link-to}}
+
+	{{#link-to 'user.decks' model.id title="Decks"}}
+		<i class="fas fa-layer-group pointer fa-2x"></i>
+	{{/link-to}}
 </div>
 
 <hr/>
