--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -4,8 +4,8 @@
 	{{/link-to}}
 
 	{{#link-to 'decks' class="fa-stack fa-1x" title="Importer un deck"}}
-		<i class="fas fa-camera fa-layer-group fa-stack-2x"></i>
-		<i class="fas fa-camera fa-long-arrow-alt-down fa-stack-2x" style="color: green;"></i>
+		<i class="fas fa-layer-group fa-stack-2x"></i>
+		<i class="fas fa-long-arrow-alt-down fa-stack-2x" style="color: green;"></i>
 	{{/link-to}}
 </div>
 
