--- a/app/templates/user.hbs
+++ b/app/templates/user.hbs
@@ -7,6 +7,11 @@
 		<i class="fas fa-th pointer fa-2x"></i>
 	{{/link-to}}
 
+	{{#link-to 'user.missing' model.id class="fa-stack fa-1x" title="Collection manquante"}}
+		<i class="fas fa-th fa-layer-group fa-stack-2x"></i>
+		<i class="fas fa-times fa-stack-2x" style="color: darkred;"></i>
+	{{/link-to}}
+
 	{{#link-to 'user.stats' model.id title="Stats"}}
 		<i class="fas fa-percent pointer fa-2x"></i>
 	{{/link-to}}
