--- a/app/templates/user/stats.hbs
+++ b/app/templates/user/stats.hbs
@@ -3,12 +3,12 @@
 {{#with model.stat.completion as |total|}}
 	<table>
 		<tr>
-			<th class="noborder" colspan={{if standard 3 9}}></th>
+			<th class="noborder" colspan={{if standard 7 25}}></th>
 			{{#unless standard}}
-				<th colspan="3">Année du Kraken</th>
+				<th colspan="9">Année du Kraken</th>
 			{{/unless}}
-			<th colspan="3">Année du Mammouth</th>
-			<th colspan="2">Année du Corbeau</th>
+			<th colspan="9">Année du Mammouth</th>
+			<th colspan="6">Année du Corbeau</th>
 		</tr>
 
 		<tr>
@@ -17,12 +17,12 @@
 			</th>
 			{{#each model.cardsets as |set|}}
 				{{#if (or (not standard) set.standard)}}
-					<th>
+					<th colspan="3">
 						<img src={{set.image}} title={{set.name_fr}} alt={{set.name_fr}} height="50px"/>
 					</th>
 				{{/if}}
 			{{/each}}
-			<th>TOTAL</th>
+			<th colspan="3">TOTAL</th>
 			<th>%</th>
 		</tr>
 
@@ -31,21 +31,27 @@
 				<th>{{rarity.name_fr}}</th>
 				{{#each model.cardsets as |set|}}
 					{{#if (or (not standard) set.standard)}}
-						<td>
-							{{#if (get (get (get (get total.cardsets set.id) "rarities") rarity.id) "total")}}
-								{{get (get (get (get total.cardsets set.id) "rarities") rarity.id) "owned"}}
-								/
-								{{get (get (get (get total.cardsets set.id) "rarities") rarity.id) "total"}}
-							{{/if}}
-						</td>
+						{{#if (get (get (get (get total.cardsets set.id) "rarities") rarity.id) "total")}}
+							<td class="stat1">
+								{{#link-to 'user.missing' model.user.id (query-params cardset=set.id rarity=rarity.id)}}
+									{{get (get (get (get total.cardsets set.id) "rarities") rarity.id) "owned"}}
+								{{/link-to}}
+							</td>
+							<td class="stat2">/</td>
+							<td class="stat3">{{get (get (get (get total.cardsets set.id) "rarities") rarity.id) "total"}}</td>
+						{{else}}
+							<td colspan="3"></td>
+						{{/if}}
 					{{/if}}
 				{{/each}}
-				<th>
-					{{get (get total.rarities rarity.id) (if standard "owned_std" "owned")}}
-					/
-					{{get (get total.rarities rarity.id) (if standard "total_std" "total")}}
+				<th class="stat1">
+					{{#link-to 'user.missing' model.user.id (query-params rarity=rarity.id)}}
+						{{get (get total.rarities rarity.id) (if standard "owned_std" "owned")}}
+					{{/link-to}}
 				</th>
-				<th>
+				<th class="stat2">/</th>
+				<th class="stat3">{{get (get total.rarities rarity.id) (if standard "total_std" "total")}}</th>
+				<th class="percent">
 					{{round (mult 100 (div (get (get total.rarities rarity.id) (if standard "owned_std" "owned")) (get (get total.rarities rarity.id) (if standard "total_std" "total"))))}}&nbsp;%
 				</th>
 			</tr>
@@ -55,26 +61,34 @@
 			<th>TOTAL</th>
 			{{#each model.cardsets as |set|}}
 				{{#if (or (not standard) set.standard)}}
-					<th>
-						{{get (get total.cardsets set.id) "owned"}}&nbsp;/&nbsp;{{get (get total.cardsets set.id) "total"}}
+					<th class="stat1">
+						{{#link-to 'user.missing' model.user.id (query-params cardset=set.id)}}
+							{{get (get total.cardsets set.id) "owned"}}
+						{{/link-to}}
 					</th>
+					<th class="stat2">/</th>
+					<th class="stat3">{{get (get total.cardsets set.id) "total"}}</th>
 				{{/if}}
 			{{/each}}
-			<th>
-				{{if standard total.owned_std total.owned}}&nbsp;/&nbsp;{{if standard total.total_std total.total}}
+			<th class="stat1">
+				{{#link-to 'user.missing' model.user.id}}
+					{{if standard total.owned_std total.owned}}
+				{{/link-to}}
 			</th>
+			<th class="stat2">/</th>
+			<th class="stat4">{{if standard total.total_std total.total}}</th>
 		</tr>
 
 		<tr>
 			<th>%</th>
 			{{#each model.cardsets as |set|}}
 				{{#if (or (not standard) set.standard)}}
-					<th>
+					<th colspan="3" class="percent">
 						{{round (mult 100 (div (get (get total.cardsets set.id) "owned") (get (get total.cardsets set.id) "total")))}} %
 					</th>
 				{{/if}}
 			{{/each}}
-			<th>
+			<th colspan="3" class="percent">
 				{{round (mult 100 (div (if standard total.owned_std total.owned) (if standard total.total_std total.total)))}}&nbsp;%
 			</th>
 		</tr>
@@ -88,11 +102,11 @@
 				<img src={{concat "/assets/" (if standard "standard" "wild") ".png"}} class="pointer" {{action 'toggleFormat'}} />
 			</th>
 			{{#each model.cardclasses as |cardclass|}}
-				<th>
+				<th colspan="3">
 					<img src={{cardclass.image}} title={{cardclass.name_fr}} alt={{cardclass.name_fr}} height="50px"/>
 				</th>
 			{{/each}}
-			<th>TOTAL</th>
+			<th colspan="3">TOTAL</th>
 			<th>%</th>
 		</tr>
 
@@ -100,20 +114,22 @@
 			<tr>
 				<th>{{rarity.name_fr}}</th>
 				{{#each model.cardclasses as |cardclass|}}
-					<td>
-						{{#if (get (get (get (get total.cardclasses cardclass.id) "rarities") rarity.id) (if standard "total_std" "total"))}}
+					<td class="stat1">
+						{{#link-to 'user.missing' model.user.id (query-params class=cardclass.id rarity=rarity.id)}}
 							{{get (get (get (get total.cardclasses cardclass.id) "rarities") rarity.id) (if standard "owned_std" "owned")}}
-							/
-							{{get (get (get (get total.cardclasses cardclass.id) "rarities") rarity.id) (if standard "total_std" "total")}}
-						{{/if}}
+						{{/link-to}}
 					</td>
+					<td class="stat2">/</td>
+					<td class="stat3">{{get (get (get (get total.cardclasses cardclass.id) "rarities") rarity.id) (if standard "total_std" "total")}}</td>
 				{{/each}}
-				<th>
-					{{get (get total.rarities rarity.id) (if standard "owned_std" "owned")}}
-					/
-					{{get (get total.rarities rarity.id) (if standard "total_std" "total")}}
+				<th class="stat1">
+					{{#link-to 'user.missing' model.user.id (query-params rarity=rarity.id)}}
+						{{get (get total.rarities rarity.id) (if standard "owned_std" "owned")}}
+					{{/link-to}}
 				</th>
-				<th>
+				<th class="stat2">/</th>
+				<th class="stat3">{{get (get total.rarities rarity.id) (if standard "total_std" "total")}}</th>
+				<th class="percent">
 					{{round (mult 100 (div (get (get total.rarities rarity.id) (if standard "owned_std" "owned")) (get (get total.rarities rarity.id) (if standard "total_std" "total"))))}}&nbsp;%
 				</th>
 			</tr>
@@ -122,23 +138,31 @@
 		<tr>
 			<th>TOTAL</th>
 			{{#each model.cardclasses as |cardclass|}}
-				<th>
-					{{get (get total.cardclasses cardclass.id) (if standard "owned_std" "owned")}}&nbsp;/&nbsp;{{get (get total.cardclasses cardclass.id) (if standard "total_std" "total")}}
+				<th class="stat1">
+					{{#link-to 'user.missing' model.user.id (query-params class=cardclass.id)}}
+						{{get (get total.cardclasses cardclass.id) (if standard "owned_std" "owned")}}
+					{{/link-to}}
 				</th>
+				<th class="stat2">/</th>
+				<th class="stat3">{{get (get total.cardclasses cardclass.id) (if standard "total_std" "total")}}</th>
 			{{/each}}
-			<th>
-				{{if standard total.owned_std total.owned}}&nbsp;/&nbsp;{{if standard total.total_std total.total}}
+			<th class="stat1">
+				{{#link-to 'user.missing' model.user.id}}
+					{{if standard total.owned_std total.owned}}
+				{{/link-to}}
 			</th>
+			<th class="stat2">/</th>
+			<th class="stat4">{{if standard total.total_std total.total}}</th>
 		</tr>
 
 		<tr>
 			<th>%</th>
 			{{#each model.cardclasses as |cardclass|}}
-				<th>
+				<th colspan="3" class="percent">
 					{{round (mult 100 (div (get (get total.cardclasses cardclass.id) (if standard "owned_std" "owned")) (get (get total.cardclasses cardclass.id) (if standard "total_std" "total"))))}} %
 				</th>
 			{{/each}}
-			<th>
+			<th colspan="3" class="percent">
 				{{round (mult 100 (div (if standard total.owned_std total.owned) (if standard total.total_std total.total)))}}&nbsp;%
 			</th>
 		</tr>
@@ -150,12 +174,12 @@
 {{#with model.stat.total as |total|}}
 	<table>
 		<tr>
-			<th class="noborder" colspan={{if standard 3 9}}></th>
+			<th class="noborder" colspan={{if standard 7 25}}></th>
 			{{#unless standard}}
-				<th colspan="3">Année du Kraken</th>
+				<th colspan="9">Année du Kraken</th>
 			{{/unless}}
-			<th colspan="3">Année du Mammouth</th>
-			<th colspan="2">Année du Corbeau</th>
+			<th colspan="9">Année du Mammouth</th>
+			<th colspan="6">Année du Corbeau</th>
 		</tr>
 
 		<tr>
@@ -164,12 +188,12 @@
 			</th>
 			{{#each model.cardsets as |set|}}
 				{{#if (or (not standard) set.standard)}}
-					<th>
+					<th colspan="3">
 						<img src={{set.image}} title={{set.name_fr}} alt={{set.name_fr}} height="50px"/>
 					</th>
 				{{/if}}
 			{{/each}}
-			<th>TOTAL</th>
+			<th colspan="3">TOTAL</th>
 			<th>%</th>
 		</tr>
 
@@ -178,21 +202,27 @@
 				<th>{{rarity.name_fr}}</th>
 				{{#each model.cardsets as |set|}}
 					{{#if (or (not standard) set.standard)}}
-						<td>
-							{{#if (get (get (get (get total.cardsets set.id) "rarities") rarity.id) "total")}}
-								{{get (get (get (get total.cardsets set.id) "rarities") rarity.id) "owned"}}
-								/
-								{{get (get (get (get total.cardsets set.id) "rarities") rarity.id) "total"}}
-							{{/if}}
-						</td>
+						{{#if (get (get (get (get total.cardsets set.id) "rarities") rarity.id) "total")}}
+							<td class="stat1">
+								{{#link-to 'user.missing' model.user.id (query-params cardset=set.id rarity=rarity.id)}}
+									{{get (get (get (get total.cardsets set.id) "rarities") rarity.id) "owned"}}
+								{{/link-to}}
+							</td>
+							<td class="stat2">/</td>
+							<td class="stat3">{{get (get (get (get total.cardsets set.id) "rarities") rarity.id) "total"}}</td>
+						{{else}}
+							<td colspan="3"></td>
+						{{/if}}
 					{{/if}}
 				{{/each}}
-				<th>
-					{{get (get total.rarities rarity.id) (if standard "owned_std" "owned")}}
-					/
-					{{get (get total.rarities rarity.id) (if standard "total_std" "total")}}
+				<th class="stat1">
+					{{#link-to 'user.missing' model.user.id (query-params rarity=rarity.id)}}
+						{{get (get total.rarities rarity.id) (if standard "owned_std" "owned")}}
+					{{/link-to}}
 				</th>
-				<th>
+				<th class="stat2">/</th>
+				<th class="stat3">{{get (get total.rarities rarity.id) (if standard "total_std" "total")}}</th>
+				<th class="percent">
 					{{round (mult 100 (div (get (get total.rarities rarity.id) (if standard "owned_std" "owned")) (get (get total.rarities rarity.id) (if standard "total_std" "total"))))}}&nbsp;%
 				</th>
 			</tr>
@@ -202,26 +232,34 @@
 			<th>TOTAL</th>
 			{{#each model.cardsets as |set|}}
 				{{#if (or (not standard) set.standard)}}
-					<th>
-						{{get (get total.cardsets set.id) "owned"}}&nbsp;/&nbsp;{{get (get total.cardsets set.id) "total"}}
+					<th class="stat1">
+						{{#link-to 'user.missing' model.user.id (query-params cardset=set.id)}}
+							{{get (get total.cardsets set.id) "owned"}}
+						{{/link-to}}
 					</th>
+					<th class="stat2">/</th>
+					<th class="stat3">{{get (get total.cardsets set.id) "total"}}</th>
 				{{/if}}
 			{{/each}}
-			<th>
-				{{if standard total.owned_std total.owned}}&nbsp;/&nbsp;{{if standard total.total_std total.total}}
+			<th class="stat1">
+				{{#link-to 'user.missing' model.user.id}}
+					{{if standard total.owned_std total.owned}}
+				{{/link-to}}
 			</th>
+			<th class="stat2">/</th>
+			<th class="stat4">{{if standard total.total_std total.total}}</th>
 		</tr>
 
 		<tr>
 			<th>%</th>
 			{{#each model.cardsets as |set|}}
 				{{#if (or (not standard) set.standard)}}
-					<th>
+					<th colspan="3" class="percent">
 						{{round (mult 100 (div (get (get total.cardsets set.id) "owned") (get (get total.cardsets set.id) "total")))}} %
 					</th>
 				{{/if}}
 			{{/each}}
-			<th>
+			<th colspan="3" class="percent">
 				{{round (mult 100 (div (if standard total.owned_std total.owned) (if standard total.total_std total.total)))}}&nbsp;%
 			</th>
 		</tr>
@@ -235,11 +273,11 @@
 				<img src={{concat "/assets/" (if standard "standard" "wild") ".png"}} class="pointer" {{action 'toggleFormat'}} />
 			</th>
 			{{#each model.cardclasses as |cardclass|}}
-				<th>
+				<th colspan="3">
 					<img src={{cardclass.image}} title={{cardclass.name_fr}} alt={{cardclass.name_fr}} height="50px"/>
 				</th>
 			{{/each}}
-			<th>TOTAL</th>
+			<th colspan="3">TOTAL</th>
 			<th>%</th>
 		</tr>
 
@@ -247,20 +285,22 @@
 			<tr>
 				<th>{{rarity.name_fr}}</th>
 				{{#each model.cardclasses as |cardclass|}}
-					<td>
-						{{#if (get (get (get (get total.cardclasses cardclass.id) "rarities") rarity.id) (if standard "total_std" "total"))}}
+					<td class="stat1">
+						{{#link-to 'user.missing' model.user.id (query-params class=cardclass.id rarity=rarity.id)}}
 							{{get (get (get (get total.cardclasses cardclass.id) "rarities") rarity.id) (if standard "owned_std" "owned")}}
-							/
-							{{get (get (get (get total.cardclasses cardclass.id) "rarities") rarity.id) (if standard "total_std" "total")}}
-						{{/if}}
+						{{/link-to}}
 					</td>
+					<td class="stat2">/</td>
+					<td class="stat3">{{get (get (get (get total.cardclasses cardclass.id) "rarities") rarity.id) (if standard "total_std" "total")}}</td>
 				{{/each}}
-				<th>
-					{{get (get total.rarities rarity.id) (if standard "owned_std" "owned")}}
-					/
-					{{get (get total.rarities rarity.id) (if standard "total_std" "total")}}
+				<th class="stat1">
+					{{#link-to 'user.missing' model.user.id (query-params rarity=rarity.id)}}
+						{{get (get total.rarities rarity.id) (if standard "owned_std" "owned")}}
+					{{/link-to}}
 				</th>
-				<th>
+				<th class="stat2">/</th>
+				<th class="stat3">{{get (get total.rarities rarity.id) (if standard "total_std" "total")}}</th>
+				<th class="percent">
 					{{round (mult 100 (div (get (get total.rarities rarity.id) (if standard "owned_std" "owned")) (get (get total.rarities rarity.id) (if standard "total_std" "total"))))}}&nbsp;%
 				</th>
 			</tr>
@@ -269,23 +309,31 @@
 		<tr>
 			<th>TOTAL</th>
 			{{#each model.cardclasses as |cardclass|}}
-				<th>
-					{{get (get total.cardclasses cardclass.id) (if standard "owned_std" "owned")}}&nbsp;/&nbsp;{{get (get total.cardclasses cardclass.id) (if standard "total_std" "total")}}
+				<th class="stat1">
+					{{#link-to 'user.missing' model.user.id (query-params class=cardclass.id)}}
+						{{get (get total.cardclasses cardclass.id) (if standard "owned_std" "owned")}}
+					{{/link-to}}
 				</th>
+				<th class="stat2">/</th>
+				<th class="stat3">{{get (get total.cardclasses cardclass.id) (if standard "total_std" "total")}}</th>
 			{{/each}}
-			<th>
-				{{if standard total.owned_std total.owned}}&nbsp;/&nbsp;{{if standard total.total_std total.total}}
+			<th class="stat1">
+				{{#link-to 'user.missing' model.user.id}}
+					{{if standard total.owned_std total.owned}}
+				{{/link-to}}
 			</th>
+			<th class="stat2">/</th>
+			<th class="stat4">{{if standard total.total_std total.total}}</th>
 		</tr>
 
 		<tr>
 			<th>%</th>
 			{{#each model.cardclasses as |cardclass|}}
-				<th>
+				<th colspan="3" class="percent">
 					{{round (mult 100 (div (get (get total.cardclasses cardclass.id) (if standard "owned_std" "owned")) (get (get total.cardclasses cardclass.id) (if standard "total_std" "total"))))}} %
 				</th>
 			{{/each}}
-			<th>
+			<th colspan="3" class="percent">
 				{{round (mult 100 (div (if standard total.owned_std total.owned) (if standard total.total_std total.total)))}}&nbsp;%
 			</th>
 		</tr>
