--- a/app/templates/user/collection.hbs
+++ b/app/templates/user/collection.hbs
@@ -67,3 +67,23 @@
 		</div>
 	{{/with}}
 {{/each}}
+
+<div class="pagination">
+	<div class="inner">
+		{{#with model.cards.meta.pagination.first.number as |pageNumber|}}
+			<i class="fas fa-angle-double-left fa-2x pointer" title={{pageNumber}} alt={{pageNumber}} {{action 'toggleParam' 'page' pageNumber}}></i>
+		{{/with}}
+		{{#with model.cards.meta.pagination.prev.number as |pageNumber|}}
+			<i class="fas fa-angle-left fa-2x pointer" title={{pageNumber}} alt={{pageNumber}} {{action 'toggleParam' 'page' pageNumber}}></i>
+		{{/with}}
+		<span>
+			{{page}}
+		</span>
+		{{#with model.cards.meta.pagination.next.number as |pageNumber|}}
+			<i class="fas fa-angle-right fa-2x pointer" title={{pageNumber}} alt={{pageNumber}} {{action 'toggleParam' 'page' pageNumber}}></i>
+		{{/with}}
+		{{#with model.cards.meta.pagination.last.number as |pageNumber|}}
+			<i class="fas fa-angle-double-right fa-2x pointer" title={{pageNumber}} alt={{pageNumber}} {{action 'toggleParam' 'page' pageNumber}}></i>
+		{{/with}}
+	</div>
+</div>
