--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -69,6 +69,17 @@ th.format img {
 	margin: 0 20px;
 }
 
+.card .number .wanted {
+	float: right;
+	filter: opacity(100%);
+	color: red;
+}
+
+.card .number .wanted i {
+	color: red;
+	margin: 0 15px 0 3px;
+}
+
 .pagination {
 	clear: left;
 	width: 100%;
