--- a/app/templates/user/collection.hbs
+++ b/app/templates/user/collection.hbs
@@ -54,8 +54,16 @@
 				<div class="wanted">
 					{{#with (filter (action "filterOwned") card.wantedcards) as |wantedcards|}}
 						<span>
-							{{wantedcards.firstObject.number}} <i class="fas fa-heart"></i>
+							{{reduce (action "sumWanted") 0 wantedcards}} <i class="fas fa-heart"></i>
 						</span>
+						<ul class="wanteddecks">
+							{{#each wantedcards as |wantedcard|}}
+								<li>
+									{{wantedcard.number}} <i class="fas fa-heart"></i>
+									{{wantedcard.wanteddeck.deck.cardclass.name_fr}} {{wantedcard.wanteddeck.deck.name}}
+								</li>
+							{{/each}}
+						</ul>
 					{{/with}}
 				</div>
 				<i class="fas fa-minus-circle pointer" {{action 'removeFromCollection' card}}></i>
@@ -72,8 +80,16 @@
 				<div class="wanted">
 					{{#with (filter (action "filterOwned") card.wantedcards) as |wantedcards|}}
 						<span>
-							{{wantedcards.firstObject.number}} <i class="fas fa-heart"></i>
+							{{reduce (action "sumWanted") 0 wantedcards}} <i class="fas fa-heart"></i>
 						</span>
+						<ul class="wanteddecks">
+							{{#each wantedcards as |wantedcard|}}
+								<li>
+									{{wantedcard.number}} <i class="fas fa-heart"></i>
+									{{wantedcard.wanteddeck.deck.cardclass.name_fr}} {{wantedcard.wanteddeck.deck.name}}
+								</li>
+							{{/each}}
+						</ul>
 					{{/with}}
 				</div>
 				<i class="fas fa-plus-circle pointer" {{action 'addToCollection' card}}></i>
